# soctalk-launchpad

./: .gitignore  Makefile  PLAN_V2.md  README.md  plan.md
.github/workflows/: release.yml
cli/: .gitignore  README.md  go.mod  go.sum
cli/cmd/launchpad/: main.go  sync.go
cli/cmd/lpindex/: main.go
docs/: plugin-distribution-plan.md
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/tests/: hybrid-pilot.spec.ts  pilot.spec.ts  vmware-pilot.spec.ts
plugins/aws/: go.mod  go.sum  main.go  plugin.yaml
plugins/azure/: go.mod  go.sum  main.go  plugin.yaml
plugins/docker/: go.mod  go.sum  main.go  plugin.yaml
plugins/hetzner/: .gitignore  go.mod  go.sum  main.go  plugin.yaml
plugins/libvirt/: go.mod  image.go  main.go  plugin.yaml
plugins/mock/: go.mod  launchpad-plugin-mock  main.go  plugin.yaml
plugins/proxmox/: go.mod  main.go  plugin.yaml
plugins/qemu/: go.mod  image.go  main.go  plugin.yaml
plugins/virtualbox/: go.mod  image.go  main.go  plugin.yaml
plugins/vmware/: README.md  cloudinit.go  go.mod  go.sum  main.go  ova.go  plugin.yaml  tailscale.go
plugins/wsl2/: agent.go  go.mod  image.go  main.go  plugin.yaml
scripts/: build-release.sh
sdk-go/: README.md  go.mod  protocol.go  serve.go  serve_test.go  transport.go
sdk-py/: pyproject.toml
sdk-py/examples/mock_py/: plugin.py
sdk-py/src/launchpad_sdk/: __init__.py  _errors.py  _protocol.py  _serve.py
sdk-py/tests/: test_serve.py
tests/e2e/: README.md  verify_console.py
(+83 files in other folders)
